unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/HONORARIOS_PAGADOS__c.object-meta.xml
<CustomObject>
    <label>HONORARIOS PAGADOS</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Nombre de HONORARIOS PAGADOS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HONORARIOS PAGADOS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>