unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>HONORARIOS PAGADOS</relationshipLabel>
    <relationshipName>HONORARIOS_PAGADOS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>