unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/fields/CONCEPTO_HON_PAG__c.field-meta.xml
<CustomField>
    <fullName>CONCEPTO_HON_PAG__c</fullName>
    <label>CONCEPTO HON PAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>