unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/fields/IMPORTE__c.field-meta.xml
<CustomField>
    <fullName>IMPORTE__c</fullName>
    <label>IMPORTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>