unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/fields/PC1__c.field-meta.xml
<CustomField>
    <fullName>PC1__c</fullName>
    <label>PC1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>