unpackaged/main/default/objects/HONORARIOS_PAGADOS__c/fields/PC2__c.field-meta.xml
<CustomField>
    <fullName>PC2__c</fullName>
    <label>PC2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>